test_data/pos/ss/652616/Profile_data/652616.a3m
>652616
MSSTISDRIISRSVIEAARFIQSWEDADPDNLTESQVLAASSFAARLHEGLQATVLQRLVDESNRDEYREFQAWEEALLNADGRVTSNPFADWGWWYRIANVMLATASQNVGVAWGSHVHGRLMAIFQDRFQQHYEDEEC
>tr|A0A0C6EQC0|A0A0C6EQC0_PSEAI ABC transporter permease OS=Pseudomonas aeruginosa GN=AN280_18045 PE=4 SV=1
---MDENYIIARSIKEANKFIQTWEEADIEKLTDDQTRAAIGFASKINSELREWIRMHLDGEGTAHEEGYLKE---QQAPWKKANTGDLFTDFGWWHRIANLMLHTAYINHAMLGGDRYHSRLMEIFRDRFSYPEE----
>tr|L7P7R7|L7P7R7_9CAUD Uncharacterized protein OS=Pseudomonas phage JBD5 GN=JBD5_035 PE=4 SV=1
---TISDRIVARSVIEAARFIQSWEDADPDSLTEDQVLAAAGFAARLHEGLQATVLQRLVDESNHEEYREFKAWEEALLNADGRVASSPFADWGWWYRIANVMLATASQNVGVTWGSRVHGRLMAIFQDKFKQRYE----
