test_data/neg/ss/655288/Profile_data/655288.a3m
>655288
MSYLVTIFSINAIGVVRRYDTTARSRTDAASVLIKYKAPRGYKFDRFELSRERSIFDVL
>tr|B7SSL8|B7SSL8_BPNF Putative uncharacterized protein OS=Bacillus phage Nf PE=4 SV=1
MRYDVTIYSINDEGKTKVYKTTSDTKVNVARILVSYKPTRGYRFDRFECIKARTIFDI-
